# bittorrent

./: .ackrc  .ghci  .gitattributes  .gitignore  .gitmodules  .mailmap  .travis.yml  BEP.md  ChangeLog  LICENSE  Makefile  README.md  TODO.org  bittorrent.cabal  changelog  network-bittorrent.cabal  run-bench  run-tests
bench/: Main.hs  TorrentFile.hs  serialization.hs
dev/: README.md  add-sources.sh  update-dependencies.sh
examples/: Client.hs  FS.hs  GetTorrent.hs  Main.hs  Main.lhs  MkTorrent.hs
exsamples/: Main.hs
res/: pkg.torrent  testfile  testfile.torrent
src/: Readme.md
src/Data/: Bitfield.hs  Torrent.hs
src/Data/Bitfield/: Mutable.hs
src/Data/Kademlia/: Common.hs  RoutingTable.hs
src/Data/Kademlia/Routing/: Bucket.hs  Table.hs  Tree.hs
src/Data/Torrent/: Bitfield.hs  Block.hs  Client.hs  InfoHash.hs  JSON.hs  Layout.hs  Magnet.hs  Piece.hs  Progress.hs  Tree.hs  URN.hs
src/Network/: BitTorrent.hs  Torrent.hs
src/Network/BitTorrent/: Address.hs  Client.hs  Core.hs  DHT.hs  Discovery.hs  Exchange.hs  Extension.hs  Internal.hs  Internal.lhs  Peer.hs  PeerID.hs  PeerWire.hs  Readme.md  Sessions.hs  Tracker.hs
src/Network/BitTorrent/Client/: Handle.hs  Swarm.hs  Types.hs
src/Network/BitTorrent/Core/: Fingerprint.hs  Node.hs  NodeInfo.hs  PeerAddr.hs  PeerId.hs
src/Network/BitTorrent/DHT/: ContactInfo.hs  Message.hs  Protocol.hs  Query.hs  Readme.md  Routing.hs  Server.hs  Session.hs  Token.hs
src/Network/BitTorrent/Exchange/: Assembler.hs  Bitfield.hs  Block.hs  Bus.hs  Connection.hs  Download.hs  Extension.hs  Manager.hs  Message.hs  Protocol.hs  Selection.hs  Session.hs  Status.hs  Wire.hs
src/Network/BitTorrent/Exchange/Connection/: Status.hs
src/Network/BitTorrent/Exchange/Message/: Extended.hs
src/Network/BitTorrent/Exchange/Session/: Metadata.hs  Status.hs
src/Network/BitTorrent/Exchange/Wire/: Status.hs
src/Network/BitTorrent/Internal/: Cache.hs  Progress.hs  Types.hs
src/Network/BitTorrent/Peer/: Addr.hs  ClientInfo.hs  ID.hs  Status.hs
src/Network/BitTorrent/PeerWire/: Bitfield.hs  Block.hs  ClientInfo.hs  Handshake.hs  Message.hs  Protocol.hs  Selection.hs
src/Network/BitTorrent/Sessions/: Types.lhs
src/Network/BitTorrent/Tracker/: Cache.hs  Extension.hs  HTTP.hs  List.hs  Message.hs  Protocol.hs  RPC.hs  Scrape.hs  Server.hs  Session.hs  UDP.hs  Wai.hs
src/Network/BitTorrent/Tracker/RPC/: HTTP.hs  Message.hs  UDP.hs
src/Network/DHT/: Kademlia.hs
src/Network/Torrent/: Handshake.hs  PWP.hs  PeerID.hs  PeerWire.hs  THP.hs  Tracker.hs
src/Network/Torrent/PeerWire/: Block.hs  Handshake.hs  Message.hs
src/Network/Torrent/Tracker/: Scrape.hs
src/System/IO/MMap/: Fixed.hs
src/System/Torrent/: FileMap.hs  Storage.hs  Tree.hs
tests/: Config.hs  Encoding.hs  InfoHash.hs  MMap.hs  Main.hs  Readme.md  Spec.hs  client.hs  dapper-dvd-amd64.iso.torrent  encoding.hs  info-hash.hs
tests/Data/: TorrentSpec.hs
tests/Data/Torrent/: BitfieldSpec.hs  ClientSpec.hs  InfoHashSpec.hs  LayoutSpec.hs  MagnetSpec.hs  MetainfoSpec.hs  PieceSpec.hs  ProgressSpec.hs
tests/Network/BitTorrent/: CoreSpec.hs  DHTSpec.hs
tests/Network/BitTorrent/Client/: HandleSpec.hs
tests/Network/BitTorrent/Core/: FingerprintSpec.hs  NodeInfoSpec.hs  NodeSpec.hs  PeerAddrSpec.hs  PeerIdSpec.hs
tests/Network/BitTorrent/DHT/: MessageSpec.hs  QuerySpec.hs  RoutingSpec.hs  SessionSpec.hs  TestData.hs  TokenSpec.hs
tests/Network/BitTorrent/Exchange/: BitfieldSpec.hs  BlockSpec.hs  ConnectionSpec.hs  DownloadSpec.hs  MessageSpec.hs  SessionSpec.hs  WireSpec.hs
tests/Network/BitTorrent/Exchange/Session/: MetadataSpec.hs
tests/Network/BitTorrent/Internal/: CacheSpec.hs  ProgressSpec.hs
tests/Network/BitTorrent/Tracker/: CacheSpec.hs  ListSpec.hs  MessageSpec.hs  RPCSpec.hs  SessionSpec.hs  TestData.hs
tests/Network/BitTorrent/Tracker/RPC/: HTTPSpec.hs  MessageSpec.hs  UDPSpec.hs
tests/System/Torrent/: FileMapSpec.hs  StorageSpec.hs
