name:                  bittorrent
version:               0.0.0.3
license:               BSD3
license-file:          LICENSE
author:                Sam Truzjan
maintainer:            Sam Truzjan <pxqr.sta@gmail.com>
copyright:             (c) 2013, Sam Truzjan
category:              Network
build-type:            Simple
cabal-version:         >= 1.10
tested-with:           GHC == 7.4.1
                     , GHC == 7.6.3
homepage:              https://github.com/cobit/bittorrent
bug-reports:           https://github.com/cobit/bittorrent/issues
synopsis:              Bittorrent protocol implementation.
description:

  A library for making Haskell bittorrent applications easy.
  .
  For more information see:
  <https://github.com/cobit/bittorrent/blob/master/README.md>

extra-source-files:    res/dapper-dvd-amd64.iso.torrent
                       res/pkg.torrent
                     , README.md
                     , ChangeLog

source-repository head
  type:                git
  location:            git://github.com/cobit/bittorrent.git

source-repository this
  type:                git
  location:            git://github.com/cobit/bittorrent.git
  branch:              master
  tag:                 v0.0.0.3

library
  default-language:    Haskell2010
  default-extensions:  PatternGuards
                     , OverloadedStrings
                     , RecordWildCards
  hs-source-dirs:      src
  exposed-modules:     Data.Torrent
--                     , Data.Torrent.Bitfield
                     , Data.Torrent.Block
                     , Data.Torrent.Client
                     , Data.Torrent.InfoHash
                     , Data.Torrent.Layout
                     , Data.Torrent.Magnet
                     , Data.Torrent.Piece
                     , Data.Torrent.Progress
                     , Data.Torrent.Tree
                     , Data.Torrent.URN
--                   , Network.BitTorrent
                     , Network.BitTorrent.Core.PeerId
                     , Network.BitTorrent.Core.PeerAddr
--                   , Network.BitTorrent.DHT
--                   , Network.BitTorrent.DHT.Protocol
--                   , Network.BitTorrent.DHT.Session
--                   , Network.BitTorrent.Exchange
--                   , Network.BitTorrent.Exchange.Assembler
--                   , Network.BitTorrent.Exchange.Message
--                   , Network.BitTorrent.Exchange.Session
--                     , Network.BitTorrent.Exchange.Status
--                   , Network.BitTorrent.Exchange.Wire
--                   , Network.BitTorrent.Extension
--                   , Network.BitTorrent.Tracker
--                     , Network.BitTorrent.Tracker.RPC
                     , Network.BitTorrent.Tracker.Wai
                     , Network.BitTorrent.Tracker.RPC.Message
                     , Network.BitTorrent.Tracker.RPC.HTTP
                     , Network.BitTorrent.Tracker.RPC.UDP
--                   , Network.BitTorrent.Tracker.Session
--                   , Network.BitTorrent.Session
--                   , Network.BitTorrent.Session.Types
--                   , System.Torrent.Storage
  other-modules:       Paths_bittorrent

  build-depends:       base       == 4.*
                     , bits-extras
                     , convertible
                     , pretty
                     , pretty-class

                       -- Control
                     , deepseq
                     , lens
                     , resourcet
--                     , transformers

                       -- Concurrency
--                     , SafeSemaphore
--                     , BoundedChan >= 1.0.1.0
--                     , stm         >= 2.4

                       -- Streaming
                     , conduit          >= 1.0
                     , network-conduit  >= 1.0
                     , cereal-conduit   >= 0.5

                       -- Data & Data structures
                     , bytestring  >= 0.10.0.0
                     , containers  >= 0.4
                     , data-default
                     , IntervalMap
                     , intset
                     , split
                     , text        >= 0.11.0
                     , unordered-containers
                     , vector

                       -- Hashing
                     , cryptohash == 0.10.*
                     , hashable >= 1.2

                       -- Codecs & Serialization
                     , aeson >= 0.6.2.0
                     , base16-bytestring
                     , base32-bytestring >= 0.2
                     , base64-bytestring
                     , bencoding   >= 0.4
                     , cereal      >= 0.3

                       -- Time
                     , old-locale  >= 1.0
                     , time        >= 0.1

                       -- Network
                     , network     >= 2.4
                     , http-types  >= 0.7
                     , http-conduit
                     , wai
--                     , krpc

                       -- System
                     , directory   >= 1
                     , entropy
                     , filepath    >= 1
--                     , mmap

  ghc-options:         -Wall
  ghc-prof-options:


test-suite spec
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  other-modules:       Data.Torrent.ClientSpec
                       Data.Torrent.InfoHashSpec
                       Data.Torrent.MagnetSpec
                       Data.Torrent.MetainfoSpec
                       Data.Torrent.ProgressSpec
                       Network.BitTorrent.Core.PeerIdSpec
                       Network.BitTorrent.Tracker.RPC.MessageSpec
                       Network.BitTorrent.Tracker.RPC.HTTPSpec
                       Network.BitTorrent.Tracker.RPC.UDPSpec
  build-depends:       base == 4.*
                     , bytestring
                     , directory
                     , filepath
                     , time
                     , convertible
                     , data-default

                     , aeson
                     , cereal
                     , network
                     , text

                     , mtl
                     , resourcet

                     , hspec
                     , QuickCheck
                     , quickcheck-instances
                     , http-types
                     , bencoding
                     , bittorrent
  ghc-options:         -Wall -fno-warn-orphans


--benchmark bench
--  default-language:    Haskell2010
--  default-extensions:
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      bench
--  main-is:             Main.hs
--  build-depends:       base
--                     , bytestring
--                     , cereal
--                     , network
--
--                     , criterion
--                     , deepseq
--
--                     , bittorrent
--  ghc-options:         -O2 -Wall -fno-warn-orphans
