name:                  bittorrent
version:               0.0.0.3
license:               BSD3
license-file:          LICENSE
author:                Sam Truzjan
maintainer:            Sam Truzjan <pxqr.sta@gmail.com>
copyright:             (c) 2013, Sam Truzjan
category:              Network
build-type:            Simple
cabal-version:         >= 1.10
tested-with:           GHC == 7.4.1
                     , GHC == 7.6.3
homepage:              https://github.com/cobit/bittorrent
bug-reports:           https://github.com/cobit/bittorrent/issues
synopsis:              Bittorrent protocol implementation.
description:

  A library for making Haskell bittorrent applications easy.
  .
  For more information see:
  <https://github.com/cobit/bittorrent/blob/master/README.md>

extra-source-files:    res/dapper-dvd-amd64.iso.torrent
                       res/pkg.torrent
                     , README.md
                     , ChangeLog

source-repository head
  type:                git
  location:            git://github.com/cobit/bittorrent.git

source-repository this
  type:                git
  location:            git://github.com/cobit/bittorrent.git
  branch:              master
  tag:                 v0.0.0.3

flag examples
  description:         Whether to build examples.
  default:             False

library
  default-language:    Haskell2010
  default-extensions:  PatternGuards
                     , OverloadedStrings
                     , RecordWildCards
  hs-source-dirs:      src
  exposed-modules:     Data.Torrent
                       Data.Torrent.Bitfield
                       Data.Torrent.InfoHash
                       Data.Torrent.Layout
                       Data.Torrent.Magnet
                       Data.Torrent.Piece
                       Data.Torrent.Progress
                       Data.Torrent.Tree
                       Network.BitTorrent
                       Network.BitTorrent.Client
                       Network.BitTorrent.Client.Swarm
                       Network.BitTorrent.Core
                       Network.BitTorrent.Core.Fingerprint
                       Network.BitTorrent.Core.NodeInfo
                       Network.BitTorrent.Core.PeerId
                       Network.BitTorrent.Core.PeerAddr
                       Network.BitTorrent.DHT
                       Network.BitTorrent.DHT.Message
                       Network.BitTorrent.DHT.Routing
                       Network.BitTorrent.DHT.Session
                       Network.BitTorrent.DHT.Token
--                     Network.BitTorrent.Exchange
                       Network.BitTorrent.Exchange.Assembler
                       Network.BitTorrent.Exchange.Block
                       Network.BitTorrent.Exchange.Message
                       Network.BitTorrent.Exchange.Selection
--                     Network.BitTorrent.Exchange.Session
                       Network.BitTorrent.Exchange.Status
                       Network.BitTorrent.Exchange.Wire
--                     Network.BitTorrent.Tracker
                       Network.BitTorrent.Tracker.Message
                       Network.BitTorrent.Tracker.RPC
                       Network.BitTorrent.Tracker.RPC.HTTP
                       Network.BitTorrent.Tracker.RPC.UDP
                       Network.BitTorrent.Tracker.Wai
--                     Network.BitTorrent.Tracker.Session
                       System.Torrent.FileMap
                       System.Torrent.Storage
  other-modules:       Paths_bittorrent
                       Data.Torrent.JSON

  build-depends:       base       == 4.*
                     , lifted-base
                     , bits-extras  >= 0.1.2
                     , convertible  >= 1.0
                     , pretty       >= 1.1
                     , pretty-class >= 0.1

                       -- Control
                     , deepseq      >= 1.3
                     , lens         >= 3.0
                     , resourcet    >= 0.4
                     , mtl
                     , monad-control
                     , transformers-base

                       -- Concurrency
                     , SafeSemaphore
                     , lifted-async
--                     , BoundedChan >= 1.0.1.0
                     , stm         >= 2.4

                       -- Streaming
                     , conduit          >= 1.0
                     , network-conduit  >= 1.0
                     , cereal-conduit   >= 0.5

                       -- * Logging
                     , fast-logger  >= 2.0
                     , monad-logger >= 0.3.4

                       -- Data & Data structures
                     , bytestring   >= 0.10
                     , containers   >= 0.5
                     , data-default >= 0.4
--                     , data-dword
                     , intset       >= 0.1
                     , PSQueue      >= 1.1
                     , split        >= 0.2
                     , text         >= 0.11.0
                     , unordered-containers
                     , vector       >= 0.10

                       -- Hashing
                     , cryptohash   >= 0.10
                     , hashable >= 1.2

                       -- Codecs & Serialization
                     , aeson >= 0.6.2.0
                     , attoparsec        >= 0.10
                     , base16-bytestring >= 0.1
                     , base32-bytestring >= 0.2
                     , base64-bytestring >= 1.0
                     , bencoding    >= 0.4.3
                     , cereal       >= 0.3.5

                       -- Time
                     , old-locale   >= 1.0
                     , time         >= 1.0

                       -- Network
                     , network      >= 2.4
                     , krpc         >= 0.6
                     , http-types   >= 0.8
                     , http-conduit >= 1.9 && < 2.0
                     , wai          >= 1.4 && < 2.0
                     , iproute

                       -- System
                     , directory   >= 1.2
                     , entropy     >= 0.2
                     , filepath    >= 1.3
                     , mmap        >= 0.5
                     , random      >= 1.0.0.2

  ghc-options:         -Wall
  ghc-prof-options:


test-suite spec
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Main.hs
  other-modules:       Spec
                       Data.Torrent.BitfieldSpec
                       Data.Torrent.InfoHashSpec
                       Data.Torrent.LayoutSpec
                       Data.Torrent.MagnetSpec
                       Data.Torrent.MetainfoSpec
                       Data.Torrent.PieceSpec
                       Data.Torrent.ProgressSpec
                       Network.BitTorrent.CoreSpec
                       Network.BitTorrent.Core.FingerprintSpec
                       Network.BitTorrent.Core.NodeInfoSpec
                       Network.BitTorrent.Core.PeerAddrSpec
                       Network.BitTorrent.Core.PeerIdSpec
                       Network.BitTorrent.DHT.MessageSpec
                       Network.BitTorrent.DHT.RoutingSpec
                       Network.BitTorrent.DHT.TokenSpec
                       Network.BitTorrent.Tracker.MessageSpec
                       Network.BitTorrent.Tracker.RPCSpec
                       Network.BitTorrent.Tracker.RPC.HTTPSpec
                       Network.BitTorrent.Tracker.RPC.UDPSpec
                       Network.BitTorrent.Exchange.MessageSpec
                       System.Torrent.StorageSpec
                       System.Torrent.FileMapSpec
  build-depends:       base == 4.*
                     , bytestring
                     , directory
                     , filepath
                     , time
                     , convertible
                     , data-default
                     , monad-loops
                     , monad-logger
                     , containers
                     , iproute

                     , aeson
                     , cereal
                     , network
                     , text

                     , mtl
                     , resourcet
                     , conduit

                     , hspec >= 1.8.1.1
                     , QuickCheck
                     , quickcheck-instances
                     , http-types
                     , bencoding
                     , process
                     , krpc  >= 0.6
                     , bittorrent
  ghc-options:         -Wall -fno-warn-orphans


--benchmark bench
--  default-language:    Haskell2010
--  default-extensions:
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      bench
--  main-is:             Main.hs
--  build-depends:       base
--                     , bytestring
--                     , cereal
--                     , network
--
--                     , criterion
--                     , deepseq
--
--                     , bittorrent
--  ghc-options:         -O2 -Wall -fno-warn-orphans

-- Utility to work with torrent files.
executable mktorrent
  if !flag(examples)
    buildable:         False
  default-language:    Haskell2010
  hs-source-dirs:      examples
  main-is:             MkTorrent.hs
  other-modules:       Paths_bittorrent
  build-depends:       base == 4.6.*
                     , bytestring
                     , text
                     , pretty-class

                     , mtl
                     , conduit
                     , lens
                     , async
                     , parallel-io

                     , network
                     , bittorrent

                     , filepath
                     , optparse-applicative
                     , hslogger
  ghc-options:         -Wall -O2 -threaded

-- nonfunctioning example of very basic bittorrent client
executable client
  if !flag(examples)
    buildable:         False
  default-language:    Haskell2010
  hs-source-dirs:      examples
  main-is:             Client.hs
  build-depends:       base        == 4.*
                     , bittorrent
                     , pretty-class
                     , data-default